--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,12 @@
+ci:
+  autoupdate_schedule: monthly
+
 default_language_version:
   python: python3.10
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v3.2.0
+  rev: v4.5.0
   hooks:
   - id: check-yaml
   - id: check-toml
@@ -12,25 +15,25 @@ repos:
   - id: check-added-large-files
 
 - repo: https://github.com/asottile/pyupgrade
-  rev: v3.11.1
+  rev: v3.15.0
   hooks:
   - id: pyupgrade
     args: ["--py310-plus"]
 
 - repo: https://github.com/psf/black
-  rev: 23.7.0
+  rev: 23.10.1
   hooks:
   - id: black
     args: ['--config=./pyproject.toml']
 
 - repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.0.286
+  rev: v0.1.3
   hooks:
   - id: ruff
     args: ['--config=./pyproject.toml']
 
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.5.1
+  rev: v1.6.1
   hooks:
   - id: mypy
     args: ['--config-file=./pyproject.toml']
